2003-09-08  Zoltan Varga  <vargaz@freemail.hu>

	* reflection.c icall.c: Fixed warnings.

	* image.c (load_class_names): Use a temporary hash table to hold the
	namespaces in order to avoid doing many string comparisons.

	* image.h: Fix typo.

	* image.c class.c rawbuffer.c reflection.c threads.c verify.c domain.c:
	Pass NULL instead of g_direct_equal to the GHashTable constructor 
	since the NULL case is short-circuited inside g_hash_table_lookup, 
	leading to better performance.	

	* metadata.c (mono_metadata_custom_attrs_from_index): New function to
	obtain the first custom attribute for a given index. Depends on the
	CustomAttribute table being sorted by the parent field.

	* reflection.c (mono_custom_attrs_from_index): Use the new function 
	for better performance.

2003-09-07  Martin Baulig  <martin@ximian.com>

	* class.c (mono_class_init): If we're a generic instance, inflate
	all our methods instead of loading them from the image.
	(mono_class_from_generic): Set `class->methods = gklass->methods'.

2003-09-07  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.c: Added support for constructors.

>>>>>>> 1.1094
2003-09-06  Martin Baulig  <martin@ximian.com>

	* icall.c (ves_icall_TypeBuilder_get_IsUnboundGenericParameter):
	New interncall.

	* reflection.c (mono_reflection_setup_generic_class): Call
	ensure_runtime_vtable() to create the vtable.

2003-09-05  Martin Baulig  <martin@ximian.com>

	* class.c (mono_class_array_element_size): Added MONO_TYPE_VAR and
	MONO_TYPE_MVAR.

2003-09-04  Martin Baulig  <martin@ximian.com>

	* reflection.c (mono_reflection_define_generic_parameter): Generic
	parameters start with zero.

2003-09-04  Martin Baulig  <martin@ximian.com>

	* metadata.c (mono_type_size): Added MONO_TYPE_VAR and MONO_TYPE_MVAR.

	* reflection.h (MonoReflectionGenericParam): New typedef.
	(MonoReflectionTypeBuilder): Added `generic_params' fields to get
	the generic parameters from the managed TypeBuilder.
